# cyto-mask

./: .gitignore  README.md  augment.py  check_coco_rle.py  coco_rle.py  data_cnn.py  edge_detection.py  edge_detection_new.py  finetune_sam2.py  generate_masks.py  imag_resize.py  individual_rle_annotations.json  mask_augment.py  merged_rle_annotations.json  microsam.ipynb  pipeline.sh  prepare_data.py  pyproject.toml  requirements.txt  rotation_degrees.json  superimpose.py  test_sam.py  testing.py  tiff_new.py  trial.py  trial_1.ipynb  unet.ipynb
config/: 450_rotation_degrees.json
models/: gpttrain.py  gptvalidation.py  microsam.ipynb  visualize.ipynb
models/sam2/: sam2.ipynb
models/sam2/notebooks/: plot.py
preprocess/: augment.py  generate_masks.py
sam2/: .gitignore
sam2/notebooks/: NEW.ipynb  new.txt  parse_txt.py  parsed_data.json  plot.ipynb
